# features/v1/role_permissions/dto/create_role_permission_request.go
@@ -1,1 +1,8 @@
 package dto
+
+type CreateRolePermissionRequest struct {
+	RoleID      uint `json:"role_id"`
+	Permissions []struct {
+		ID uint `json:"id"`
+	} `json:"permissions"`
+}
